--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,11 @@
 	<groupId>radium</groupId>
 	<artifactId>executable</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.0-SNAPSHOT</version>
 	<scm>
 		<url>https://github.com/radium226/executable</url>
 		<connection>scm:git:https://github.com/radium226/executable.git</connection>
 		<developerConnection>scm:git:https://github.com/radium226/executable.git</developerConnection>
-		<tag>executable-1.0</tag>
 	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,11 +37,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.3</version>
-				<configuration>
-					<providerImplementations>
-						<git>jgit</git>
-					</providerImplementations>
-				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.scm</groupId>
