--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,11 @@
     <groupId>radium</groupId>
     <artifactId>executable</artifactId>
     <packaging>jar</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <scm>
         <url>https://github.com/radium226/executable</url>
         <connection>scm:git:https://github.com/radium226/executable.git</connection>
         <developerConnection>scm:git:https://github.com/radium226/executable.git</developerConnection>
-      <tag>executable-1.0</tag>
   </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,27 +26,11 @@
                 <groupId>de.jutzig</groupId>
                 <artifactId>github-release-plugin</artifactId>
                 <version>1.1.0</version>
-                <!--<executions>
-                    <execution>
-                        <id>github-upload</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>release</goal>
-                        </goals>
-                        <inherited>false</inherited>
-                        <configuration>
-                            <serverId>github.com</serverId>
-                            <description>Executable ${project.version} Release</description>
-                            <releaseName>executable-${project.version}</releaseName>
-                            <tag>${project.version}</tag>
-                        </configuration>
-                    </execution>
-                </executions>!-->
                 <configuration>
                     <serverId>github.com</serverId>
                     <description>Executable ${project.version} Release</description>
                     <releaseName>executable-${project.version}</releaseName>
-                    <tag>${project.version}</tag>
+                    <tag>executable-${project.version}</tag>
                 </configuration>
             </plugin>
 
@@ -56,7 +39,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <goals>de.jutzig:github-release-plugin:1.1.0:release</goals>
+                    <goals>package de.jutzig:github-release-plugin:1.1.0:release</goals>
                 </configuration>
             </plugin>
         </plugins>
