--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
     <groupId>radium</groupId>
     <artifactId>executable</artifactId>
     <packaging>jar</packaging>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <scm>
         <url>https://github.com/radium226/executable</url>
         <connection>scm:git:https://github.com/radium226/executable.git</connection>
         <developerConnection>scm:git:https://github.com/radium226/executable.git</developerConnection>
-    <tag>executable-1.0</tag>
+    <tag>HEAD</tag>
   </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
