--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
     <artifactId>executable</artifactId>
     <packaging>jar</packaging>
     <version>1.2-SNAPSHOT</version>
+<prerequisites>
+       <maven>3.0.5</maven>
+     </prerequisites>
     <scm>
         <url>https://github.com/radium226/executable</url>
         <connection>scm:git:https://github.com/radium226/executable.git</connection>
@@ -17,7 +20,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.2</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -30,8 +33,8 @@
                 <configuration>
                     <serverId>github.com</serverId>
                     <description>Executable ${project.version} Release</description>
-                    <releaseName>executable-${project.version}</releaseName>
-                    <tag>executable-${project.version}</tag>
+                    <releaseName>${project.name}-${project.version}</releaseName>
+                    <tag>${project.name}-${project.version}</tag>
                 </configuration>
             </plugin>
 
