--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <url>https://github.com/radium226/executable</url>
         <connection>scm:git:https://github.com/radium226/executable.git</connection>
         <developerConnection>scm:git:https://github.com/radium226/executable.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>executable-1</tag>
     </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
